--- a/water.html
+++ b/water.html
@@ -7,7 +7,17 @@
     <title>내 프로젝트</title>
   </head>
   <body>
-   
+    <h1>물 마시기</h1>
+    <h3>목표 : 2L</h3>
+    <!-- 큰 물컵 -->
+    <div class="cup">
+      <div class="remained" id="remained">
+        <span id="liters"></span>
+        <small>Remained</small>
+      </div>
+
+      <div class="percentage" id="percentage"></div>
+    </div>
 
     <p class="text">마신 물컵의 숫자만큼 마우스 클릭으로 선택해 주세요</p>
     <!-- 작은 물컵들 -->
